# ai-whisper

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
